# unix_labs

1/: build.sh  doc.tex  hello.c
2/: Dockerfile  run.sh  worker.sh
3/: core.cpp  hardlinker
3/test/: file3
3/test/dir1/: file4
4/: Dockerfile  cli_client.py  docker-compose.yml  pyproject.toml
4/app/: api.py  app_logger.py  database.py  models.py  summarizer.py  worker.py
